闪购超市页面的商品显示、全部分类和排序相关功能的实现

--- a/static/base/css/base.css
+++ b/static/base/css/base.css
@@ -10,6 +10,10 @@ body {
 	background: #eee;
 }
 
+a{
+	color: black;
+}
+
 header {
 	width: 100%;
 	/* document.documentElement.style.fontSize = innerWidth / 320 * 16 + "px";
