--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -44,10 +44,10 @@
             </dl>
         </a>
 
-        <a href="{% url 'app:market' %}" class="market">
+        <a href="{% url 'app:market' 104749 0 0 %}" class="market">
             <dl>
                 <dt><span></span></dt>
-                <dd>超市</dd>
+                <dd>闪购超市</dd>
             </dl>
         </a>
 
@@ -71,9 +71,11 @@
 
 
 <script src="{% static 'base/js/jquery.js' %}"></script>
+<script src="{% static 'base/js/jquery.cookie.js' %}"></script>
 <script src="{% static 'base/js/bootstrap.js' %}"></script>
 <script src="{% static 'base/js/swiper.js' %}"></script>
 <script src="{% static 'base/js/base.js' %}"></script>
+
 {# JS#}
 
 
